[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/mp/client/gameplay.gd" type="Script" id=1]
[ext_resource path="res://entity/unit/athletes/athletes.tscn" type="PackedScene" id=2]

[node name="gameplay" type="Node"]
script = ExtResource( 1 )

[node name="athletes_team_1a" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -13.9942 )
team = 1
speed = 24
is_bot = true
color = Color( 1, 0, 0, 1 )

[node name="athletes_team_1b" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.81169, 5, -13.9942 )
team = 1
speed = 24
is_bot = true
color = Color( 1, 0, 0, 1 )

[node name="athletes_team_2a" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 4.82915 )
team = 2
speed = 24
is_bot = true
color = Color( 1, 0.701961, 0, 1 )

[node name="athletes_team_2b" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.09833, 5, 4.82915 )
team = 2
speed = 24
is_bot = true
color = Color( 1, 0.701961, 0, 1 )
